fix note white space

--- a/src/app/shared/notes/notes.component.scss
+++ b/src/app/shared/notes/notes.component.scss
@@ -12,3 +12,7 @@
     color: $input-bg!important;
     text-shadow: $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px, $body-color 0 0 1px;
 }
+
+.note-content {
+    white-space: pre-line;
+}
